kube-config/blockchain-in-js/client-deployment.yaml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    name: client-deployment
  name: client-deployment
  namespace: blockchain-in-js
spec:
  replicas: 1
  selector:
    matchLabels:
      name: client-deployment
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: client-deployment
    spec:
      containers:
      - env:
        image: nambrot/blockchain-in-js:latest-client
        imagePullPolicy: Always
        name: client-deployment
        ports:
        - containerPort: 80
          name: http-server
          protocol: TCP
        resources:
          requests:
            cpu: 50m
            memory: 40Mi
        terminationMessagePath: /dev/termination-log
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
