kube-config/blockchain-in-js/client-service.yaml
# web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: client-service
  labels:
    name: client-service
  namespace: blockchain-in-js
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    name: client-deployment
