kube-config/blockchain-in-js/client-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blockchain-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
  namespace: blockchain-in-js
spec:
  tls:
  - hosts:
    - blockchain.nambrot.com
    secretName: echoserver-tls
  rules:
  - host: blockchain.nambrot.com
    http:
      paths:
      - path: /
        backend:
          serviceName: client-service
          servicePort: 80
